# megabot

./: .gitignore  .gitmodules  README.md  calibration_wall.yaml  default.rviz  setup.sh  todo.txt
base/: .mxproject  base Debug.launch  base.ioc
base/Core/Inc/ball_msgs/: BallMap.h  BallView.h
base/Core/Inc/glider/: Float64Stamped.h  Input.h  Leak.h  Mode.h  Power.h  Servos.h  SonarConfiguration.h  SonarDistance.h  SonarProfile.h  State.h
base/Core/Inc/roseus/: FixedArray.h  VariableArray.h
base/Core/Inc/uuv_auv_control_allocator/: AUVCommand.h
base/Core/Inc/uuv_control_msgs/: GetMBSMControllerParams.h  GetPIDParams.h  GetSMControllerParams.h  GoTo.h  GoToIncremental.h  InitCircularTrajectory.h  InitHelicalTrajectory.h  InitRectTrajectory.h  InitWaypointSet.h  IsRunningTrajectory.h  SetMBSMControllerParams.h  SetPIDParams.h  SetSMControllerParams.h  Waypoint.h
base/Core/Inc/uuv_gazebo_ros_plugins_msgs/: FloatStamped.h  GetFloat.h  GetListParam.h  GetThrusterEfficiency.h  SetFloat.h  SetThrusterEfficiency.h  ThrusterConversionFcn.h  UnderwaterObjectModel.h
base/Core/Inc/uuv_sensor_ros_plugins_msgs/: ChemicalParticleConcentration.h  DVL.h  DVLBeam.h  PositionWithCovariance.h  Salinity.h
base/Core/Inc/uuv_thruster_manager/: GetThrusterCurve.h  GetThrusterManagerConfig.h  SetThrusterManagerConfig.h  ThrusterManagerInfo.h
base/Core/Inc/uuv_world_ros_plugins_msgs/: GetCurrentModel.h  GetOriginSphericalCoord.h  SetCurrentDirection.h  SetCurrentModel.h  SetCurrentVelocity.h  SetOriginSphericalCoord.h  TransformFromSphericalCoord.h  TransformToSphericalCoord.h
base/Core/Src/: main.c  mainpp.cpp  stm32f4xx_hal_msp.c
base/Debug/: base.elf  base.list  base.map  makefile  objects.list  sources.mk
base/Debug/Core/Inc/: subdir.mk
base/Debug/Core/Inc/omni_bot/: main.d  omni_bot.d  subdir.mk
base/Debug/Core/Src/: main.d  main.su  mainpp.d  mainpp.su  subdir.mk
lifter_arduino/: lifter_arduino.ino
models/arena/: arena.blend  arena.blend1
ros/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros/catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
ros/catkin_ws/devel/lib/pkgconfig/: madbot_description.pc  madbot_gazebo.pc
ros/catkin_ws/src/ball_locator/: CMakeLists.txt  package.xml
ros/catkin_ws/src/ball_locator/cfg/: ImageAnalysis.cfg
ros/catkin_ws/src/ball_locator/launch/: ball_locator.launch  megabot.launch
ros/catkin_ws/src/ball_locator/src/: ball_locator_node.cpp
ros/catkin_ws/src/ball_mapper/: CMakeLists.txt  package.xml
ros/catkin_ws/src/ball_mapper/include/ball_mapper/: ball_tracker.h
ros/catkin_ws/src/ball_mapper/launch/: megabot.launch
ros/catkin_ws/src/ball_mapper/src/: ball_mapper_node.cpp
ros/catkin_ws/src/ball_mapper/src/ball_mapper/: ball_tracker.cpp
ros/catkin_ws/src/ball_mapper/srv/: ClosestBall.srv
ros/catkin_ws/src/ball_msgs/: CMakeLists.txt  package.xml
ros/catkin_ws/src/ball_msgs/msg/: BallMap.msg  BallView.msg
ros/catkin_ws/src/base_controller/: CMakeLists.txt  package.xml
ros/catkin_ws/src/base_controller/action/: GotoAngle.action  GotoPoint.action  GotoPose.action  StepperPower.action
ros/catkin_ws/src/base_controller/cfg/: BaseController.cfg
ros/catkin_ws/src/base_controller/include/: base_controller.h
ros/catkin_ws/src/base_controller/include/base_controller/: acceleration_limiter.h  goto_action.h  reset_odom_action.h  speed_curve.h  stepper_power_action.h
ros/catkin_ws/src/base_controller/src/: base_controller_node.cpp
ros/catkin_ws/src/base_controller/src/base_controller/: 2d_speed_curve.cpp  acceleration_limiter.cpp  goto_action.cpp  reset_odom_action.cpp  speed_curve.cpp  stepper_power_action.cpp
ros/catkin_ws/src/coordinate_transformer/: CMakeLists.txt  package.xml
ros/catkin_ws/src/coordinate_transformer/include/coordinate_transformer/: coordinate_transformer.h
ros/catkin_ws/src/coordinate_transformer/src/: coordinate_transformer.cpp
ros/catkin_ws/src/geometry_extended_msgs/: CMakeLists.txt  package.xml
ros/catkin_ws/src/lifter_controller/: CMakeLists.txt  package.xml
ros/catkin_ws/src/lifter_controller/action/: Grab.action  Lift.action
ros/catkin_ws/src/lifter_controller/cfg/: Lifter.cfg
ros/catkin_ws/src/lifter_controller/include/: lifter_controller.h
ros/catkin_ws/src/lifter_controller/src/: lifter_controller_node.cpp
ros/catkin_ws/src/line_locator/: CMakeLists.txt  package.xml
ros/catkin_ws/src/line_locator/cfg/: ImageAnalysis.cfg
ros/catkin_ws/src/line_locator/launch/: megabot.launch
ros/catkin_ws/src/line_locator/src/: line_locator_node.cpp
ros/catkin_ws/src/localisation/: CMakeLists.txt  package.xml
ros/catkin_ws/src/localisation/cfg/: Localisation.cfg
ros/catkin_ws/src/localisation/include/: localisation.h
ros/catkin_ws/src/localisation/launch/: megabot.launch
ros/catkin_ws/src/localisation/src/: localisation_node.cpp
ros/catkin_ws/src/localisation/srv/: SetPosition.srv
ros/catkin_ws/src/madbot_description/: CMakeLists.txt  package.xml
ros/catkin_ws/src/madbot_gazebo/: CMakeLists.txt
ros/catkin_ws/src/master_state_machine/: CMakeLists.txt  package.xml
ros/catkin_ws/src/master_state_machine/src/: ball_detect_test  calibrate  master_state_machine_node  master_state_machine_node.cpp  state_functions.py  test_localisation
ros/catkin_ws/src/megabot/: CMakeLists.txt  package.xml
ros/catkin_ws/src/megabot/config/: megabot.yaml
ros/catkin_ws/src/megabot/launch/: controller.launch  headless.launch  joystick.launch  local.launch  local_cam.launch  remote.launch  simulation.launch
ros/catkin_ws/src/megabot/map/: costmap.yaml  map.yaml
ros/catkin_ws/src/megabot/params/: megabot.yaml
ros/catkin_ws/src/megabot_description/: CMakeLists.txt  package.xml
ros/catkin_ws/src/megabot_gazebo/: CMakeLists.txt  package.xml
ros/catkin_ws/src/megabot_joystick/: CMakeLists.txt  package.xml
ros/catkin_ws/src/megabot_joystick/src/: megabot_joystick_node.cpp
ros/catkin_ws/src/odometry/: CMakeLists.txt  package.xml
ros/catkin_ws/src/param_saver/: CMakeLists.txt  package.xml
scripts/: build_local.sh  build_remote.sh  transfer.sh
(+18 files in other folders)
