<?xml version="1.0"?>
<package format="2">
  <name>ball_mapper</name>
  <version>0.0.0</version>
  <description>The ball_mapper package</description>
  <maintainer email="jridd30@gmail.com">josh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ball_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>ball_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ball_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>
  </export>
</package>
