<?xml version="1.0"?>
<package format="2">
  <name>base_controller</name>
  <version>0.0.0</version>
  <description>The base_controller package</description>
  <maintainer email="jridd30@gmail.com">josh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
