<?xml version="1.0"?>
<package format="2">
  <name>coordinate_transformer</name>
  <version>0.0.0</version>
  <description>The coordinate_transformer package</description>
  <maintainer email="jridd30@gmail.com">josh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
