<?xml version="1.0"?>
<package format="2">
  <name>lifter_controller</name>
  <version>0.0.0</version>
  <description>The lifter_controller package</description>
  <maintainer email="jridd30@gmail.com">josh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>

  <export>
  </export>
</package>
