<?xml version="1.0"?>
<package format="2">
  <name>master_state_machine</name>
  <version>0.0.0</version>
  <description>The master_state_machine package</description>
  <maintainer email="jridd30@gmail.com">josh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>base_controller</depend>

  <export>
  </export>
</package>
