<?xml version="1.0"?>
<package format="2">
  <name>megabot_joystick</name>
  <version>0.0.0</version>
  <description>The megabot_joystick package</description>
  <maintainer email="jridd30@gmail.com">josh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
